kubernetes-manifests/envoyservice_1.18.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy-config.yaml: |
    static_resources:
      listeners:
      - name: listener_0
        address:
          socket_address:
            address: 0.0.0.0
            port_value: 10000
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ["*"]
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      host_rewrite_literal: sap-orders-mock-h7pi7igbcq-ew.a.run.app
                      cluster: orderservice
                # request_headers_to_remove:
                #   - CustomHeader
              access_log:
              - name: envoy.access_loggers.stdout
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
              http_filters:
              - name: envoy.filters.http.jwt_authn
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                  providers:
                    provider1:
                      issuer: https://sts.windows.net/316ba0e4-ce9e-43ea-9086-5850f9d8609d/
                      audiences:
                        - api://c7ec33ef-cfa5-46a1-8871-a7b2d42c3380
                      remote_jwks:
                        http_uri:
                          uri: https://login.microsoftonline.com/common/discovery/v2.0/keys
                          cluster: jwks_cluster
                          timeout: 1s
                        cache_duration:
                          seconds: 300
                  rules:
                    - match:
                        prefix: /
                      requires:
                        provider_name: provider1
              - name: envoy.filters.http.router
      clusters:
      - name: httpbin
        connect_timeout: 2s
        type: LOGICAL_DNS
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: httpbin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: "httpbin.org"
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: "httpbin.org"  
      - name: orderservice
        connect_timeout: 2s
        type: LOGICAL_DNS
        http2_protocol_options: {}
        dns_lookup_family: V4_ONLY
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: orderservice
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: sap-orders-mock-h7pi7igbcq-ew.a.run.app
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
            sni: sap-orders-mock-h7pi7igbcq-ew.a.run.app
      - name: jwks_cluster
        type: STRICT_DNS
        connect_timeout: 5s
        load_assignment:
          cluster_name: jwks_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: login.microsoftonline.com
                    port_value: 443
        transport_socket:
          name: envoy.transport_sockets.tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basicenvoyservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basicenvoyservice  
  template: 
    metadata:
      name: basicenvoyservice
      labels:
        app: basicenvoyservice  
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.18-latest
          args: ["--config-path", "/config/envoy-config.yaml"]
          resources:
            requests:
              memory: "124Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 10000
          volumeMounts:
          - name: config
            mountPath: "/config"
            readOnly: true
      volumes:
        - name: config
          configMap:
            name: envoy-config
            items:
            - key: "envoy-config.yaml"
              path: "envoy-config.yaml"
---
apiVersion: v1
kind: Service
metadata:
  name: basicenvoyservice
  labels:
    app: basicenvoyservice
spec:
  ports:
  - port: 10000
    name: http
  selector:
    app: basicenvoyservice
  type: LoadBalancer
